--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,12 +11,12 @@
 
   <div class="ui text container">
     <h1 class="ui inverted header">
+      Imagine-a-Company
     </h1>
-    <div class="ui huge icon fluid input">
-      <input type="text" placeholder="Search..">
-      <i class="search icon"></i>
-    </div>
+    <h2>Do whatever you want when you want to.</h2>
+    <div class="ui huge primary button">Get Started <i class="right arrow icon"></i></div>
   </div>
+
 
 </div>
 
